Fixed tabbed sheet expand collapse elements & items that add skills and use them

--- a/styles/simple.css
+++ b/styles/simple.css
@@ -1885,8 +1885,11 @@ body {
   text-decoration: underline;
   text-shadow: none;
   font-weight: bold;
+  background-color: #e8ffe8;
+  font-size: 105%;
 }
 
+/* Cannot use table-column as it breaks the indenting logic for contained items */
 .table-column {
   padding: 3px;
   justify-content: center;
@@ -1905,7 +1908,7 @@ body {
 }
 
 .table-column span {
-  pointer-events: none;
+  /* pointer-events: none; */ /* We need pointer events to know how to expand/collapse items */
 }
 
 .desc {
